--- a/notebooks/basic_operations.ipynb
+++ b/notebooks/basic_operations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "80c75463",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "0d2deb8a",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
     "fsa.add_arc(src_node=1, dst_node=2, label=1)\n",
     "fsa.add_arc(src_node=2, dst_node=3, label=0)\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_pre_closure.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_pre_closure.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "source": [
     "The closure of a graph is easy to construct with the use of $\\epsilon$ transitions. The language of the graph below is the string $aba$. \n",
     "\n",
-    "![fsa pre closure](figures/nb/fsa_pre_closure.svg)\n",
+    "![fsa pre closure](figures/fsa_pre_closure.svg)\n",
     "\n",
     "The closure of the graph needs to accept an arbitrary number of copies of $aba$ including the empty string. To accept the empty string we make the start state an accept state as well. To accept one or more copies of $aba$ we simply wire up the old accept states to the new start state with $\\epsilon$ transitions."
    ]
@@ -125,7 +125,7 @@
     "# Connect the accept states to the new start state with an ϵ transition\n",
     "fsa.add_arc(src_node=accept, dst_node=start, label=gtn.epsilon)\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_closure.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_closure.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "source": [
     "The closed graph is shown below.\n",
     "\n",
-    "![fsa closure](figures/nb/fsa_closure.svg)\n",
+    "![fsa closure](figures/fsa_closure.svg)\n",
     "\n",
     "---\n",
     "### Example\n",
@@ -164,7 +164,7 @@
     "# Connect the accept states to the start state with an ϵ transition\n",
     "fsa.add_arc(src_node=accept, dst_node=start, label=gtn.epsilon)\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_closure_2.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_closure_2.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -174,14 +174,14 @@
    "source": [
     "This alternate construction would result in the graph below.\n",
     "\n",
-    "![fsa closure 2](figures/nb/fsa_closure_2.svg)\n",
+    "![fsa closure 2](figures/fsa_closure_2.svg)\n",
     "\n",
     "This would work and require fewer states and arcs. In the general case, this construction turns every start state into an accept state instead of adding a new start state. Give an example where this doesn't work? In other words, give an example where the graph from this modified construction is not the closure of the original graph."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "03dca44c",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
     "fsa.add_arc(src_node=0, dst_node=0, label=0)\n",
     "fsa.add_arc(src_node=0, dst_node=1, label=1)\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_pre_closure_wrong.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_pre_closure_wrong.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -200,14 +200,14 @@
    "id": "24351dcc",
    "metadata": {},
    "source": [
-    "![fsa pre closure wrong](figures/nb/fsa_pre_closure_wrong.svg)\n",
+    "![fsa pre closure wrong](figures/fsa_pre_closure_wrong.svg)\n",
     "\n",
     "The language of the above graph is $ab$ and the closure is $(ab)^*$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c979a6b6",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
     "fsa.add_arc(src_node=0, dst_node=1, label=1)\n",
     "fsa.add_arc(src_node=1, dst_node=0, label=gtn.epsilon)\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_closure_wrong.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_closure_wrong.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -230,12 +230,12 @@
    "source": [
     "If we follow the modified construction for the closure, as in the graph below, then the language would incorrectly include the set of strings $a^*$.\n",
     "\n",
-    "![fsa closure wrong](figures/nb/fsa_closure_2.svg)"
+    "![fsa closure wrong](figures/fsa_closure_wrong.svg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "16293a13",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
     "fsa.add_arc(src_node=2, dst_node=0, label=gtn.epsilon)\n",
     "fsa.add_arc(src_node=1, dst_node=2, label=gtn.epsilon)\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_closure_right.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_closure_right.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "source": [
     "The graph following the correct construction of the closure is shown below.\n",
     "\n",
-    "![fsa closure right](figures/nb/fsa_closure_right.svg)\n",
+    "![fsa closure right](figures/fsa_closure_right.svg)\n",
     "\n",
     "---\n",
     "\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "38314ca2",
    "metadata": {},
    "outputs": [],
@@ -301,9 +301,9 @@
     "g3.add_arc(src_node=0, dst_node=1, label=0)\n",
     "g3.add_arc(src_node=1, dst_node=2, label=2)\n",
     "\n",
-    "gtn.draw(g1, \"figures/nb/union_1.svg\", isymbols=symbols)\n",
-    "gtn.draw(g2, \"figures/nb/union_2.svg\", isymbols=symbols)\n",
-    "gtn.draw(g3, \"figures/nb/union_3.svg\", isymbols=symbols)"
+    "gtn.draw(g1, \"figures/union_1.svg\", isymbols=symbols)\n",
+    "gtn.draw(g2, \"figures/union_2.svg\", isymbols=symbols)\n",
+    "gtn.draw(g3, \"figures/union_3.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -315,20 +315,20 @@
     "\n",
     "Consider the three graphs below with languages $\\{ab, aba, abaa, \\ldots\\}$, $\\{ba\\}$, and $\\{ac\\}$ respectively.\n",
     "\n",
-    "![union 1](figures/nb/union_1.svg)\n",
-    "![union 2](figures/nb/union_2.svg)\n",
-    "![union 3](figures/nb/union_3.svg)"
+    "![union 1](figures/union_1.svg)\n",
+    "![union 2](figures/union_2.svg)\n",
+    "![union 3](figures/union_3.svg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "af258d06",
    "metadata": {},
    "outputs": [],
    "source": [
     "fsa = gtn.union([g1, g2, g3])\n",
-    "gtn.draw(fsa, \"figures/nb/union.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/union.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "source": [
     "Notice in the union graph below the only visual distinction from the individual graphs is that the states are numbered consecutively from $0$ to $8$ indicating a single graph with nine states instead of three individual graphs. The language of the union graph below is $\\{ba\\} \\cup \\{ac\\} \\cup \\{ab, aba, abaa, \\ldots\\}$.\n",
     "\n",
-    "![fsa union](figures/nb/union.svg)\n",
+    "![fsa union](figures/union.svg)\n",
     "\n",
     "## Concatenation\n",
     "\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7a4bc3bf",
    "metadata": {},
    "outputs": [],
@@ -371,8 +371,8 @@
     "g2.add_arc(src_node=0, dst_node=2, label=1)\n",
     "g2.add_arc(src_node=2, dst_node=3, label=2)\n",
     "\n",
-    "gtn.draw(g1, \"figures/nb/concat_1.svg\", isymbols=symbols)\n",
-    "gtn.draw(g2, \"figures/nb/concat_2.svg\", isymbols=symbols)"
+    "gtn.draw(g1, \"figures/concat_1.svg\", isymbols=symbols)\n",
+    "gtn.draw(g2, \"figures/concat_2.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -382,21 +382,21 @@
    "source": [
     "The concatenated graph can be constructed from the original input graphs by wiring start states to accept states. Assume we are concatenating $A_1, \\ldots, A_n$. The start states of the concatendated graph are the start states of the first graph, $A_1$. The accept states of the concatendated graph are the accept states of $A_n$. For any two graph $A_i$ and $A_{i+1}$, we connect each start state of $A_i$ to each accept state of $A_{i+1}$ with an $\\epsilon$ transition.\n",
     "\n",
-    "![fsa concat 1](figures/nb/concat_1.svg)\n",
-    "![fsa concat 2](figures/nb/concat_2.svg)\n",
+    "![fsa concat 1](figures/concat_1.svg)\n",
+    "![fsa concat 2](figures/concat_2.svg)\n",
     "\n",
     "As an example, consider the two graphs above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "662f1341",
    "metadata": {},
    "outputs": [],
    "source": [
     "fsa = gtn.concat([g1, g2])\n",
-    "gtn.draw(fsa, \"figures/nb/concat.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/concat.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -406,7 +406,7 @@
    "source": [
     "The concatenated graph is below and has a language $\\{baac, babc\\}$.\n",
     "\n",
-    "![fsa concat](figures/nb/concat.svg)\n",
+    "![fsa concat](figures/concat.svg)\n",
     "\n",
     "---\n",
     "\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "7cc4dd7f",
    "metadata": {},
    "outputs": [],
@@ -429,12 +429,12 @@
     "# The graph which accepts the empty string\n",
     "fsa = gtn.Graph()\n",
     "fsa.add_node(start=True, accept=True)\n",
-    "gtn.draw(fsa, \"figures/nb/concat_identity.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/concat_identity.svg\", isymbols=symbols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "51f8abd4",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
     "# The graph which does not accept any strings\n",
     "fsa = gtn.Graph()\n",
     "fsa.add_node(start=True, accept=False)\n",
-    "gtn.draw(fsa, \"figures/nb/concat_annihilator.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/concat_annihilator.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -452,11 +452,11 @@
    "source": [
     "The identity graph is a single node which is both a start and accept state. The language of the identiy graph is the empty string.\n",
     "\n",
-    "![concat identity](figures/nb/concat_identity.svg)\n",
+    "![concat identity](figures/concat_identity.svg)\n",
     "\n",
     "The annihilator graph is a single non accepting state. The language of the annihilator graph is the empty set.\n",
     "\n",
-    "![concat annihilator](figures/nb/concat_annihilator.svg)\n",
+    "![concat annihilator](figures/concat_annihilator.svg)\n",
     "\n",
     "Note the subtle distinction between the language that contains the empty string and the language that is the empty set. The former can be written as $\\{\\epsilon\\}$ whereas the latter would be $\\{\\}$ (also commonly denoted by $\\varnothing$).\n",
     "\n",
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "359b2244",
    "metadata": {},
    "outputs": [],
@@ -490,8 +490,8 @@
     "g2.add_arc(src_node=0, dst_node=2, label=0)\n",
     "g2.add_arc(src_node=1, dst_node=2, label=2)\n",
     "\n",
-    "gtn.draw(g1, \"figures/nb/concat_example_1.svg\", isymbols=symbols)\n",
-    "gtn.draw(g2, \"figures/nb/concat_example_2.svg\", isymbols=symbols)"
+    "gtn.draw(g1, \"figures/concat_example_1.svg\", isymbols=symbols)\n",
+    "gtn.draw(g2, \"figures/concat_example_2.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -501,18 +501,18 @@
    "source": [
     "The two input graphs are below.\n",
     "\n",
-    "![concat ex 1](figures/nb/concat_example_1.svg)\n",
-    "![concat ex 2](figures/nb/concat_example_2.svg)\n"
+    "![concat ex 1](figures/concat_example_1.svg)\n",
+    "![concat ex 2](figures/concat_example_2.svg)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "da3ec314",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gtn.draw(gtn.concat([g1, g2]), \"figures/nb/concat_example.svg\", isymbols=symbols)"
+    "gtn.draw(gtn.concat([g1, g2]), \"figures/concat_example.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -522,7 +522,7 @@
    "source": [
     "The concatenated graph is shown below.\n",
     "\n",
-    "![concat ex](figures/nb/concat_example.svg)\n",
+    "![concat ex](figures/concat_example.svg)\n",
     "\n",
     "---\n",
     "\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c713ea4a",
    "metadata": {},
    "outputs": [],
@@ -573,9 +573,9 @@
     "fsa_c.add_node(accept=True)\n",
     "fsa_c.add_arc(src_node=0, dst_node=1, label=2)\n",
     "\n",
-    "gtn.draw(fsa_a, \"figures/nb/fsa_a.svg\", isymbols=symbols)\n",
-    "gtn.draw(fsa_b, \"figures/nb/fsa_b.svg\", isymbols=symbols)\n",
-    "gtn.draw(fsa_c, \"figures/nb/fsa_c.svg\", isymbols=symbols)"
+    "gtn.draw(fsa_a, \"figures/fsa_a.svg\", isymbols=symbols)\n",
+    "gtn.draw(fsa_b, \"figures/fsa_b.svg\", isymbols=symbols)\n",
+    "gtn.draw(fsa_c, \"figures/fsa_c.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -585,13 +585,13 @@
    "source": [
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/fsa_a.svg\"/>\n",
+    "    <img src=\"figures/fsa_a.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/fsa_b.svg\"/> \n",
+    "    <img src=\"figures/fsa_b.svg\"/> \n",
     "  </div>\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/fsa_c.svg\"/>\n",
+    "    <img src=\"figures/fsa_c.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "     The three individual automata with languages $\\{a\\}$, $\\{b\\}$, and $\\{c\\}$ respectively.\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "060808bd",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
     "\n",
     "fsa_repeats = gtn.closure(gtn.union([aa, bb, cc]))\n",
     "\n",
-    "gtn.draw(fsa_repeats, \"figures/nb/fsa_repeats.svg\", isymbols=symbols)"
+    "gtn.draw(fsa_repeats, \"figures/fsa_repeats.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -624,10 +624,18 @@
    "source": [
     "First concatenate the individual graphs with themselves to get graphs which recognize $aa$, $bb$, and $cc$. Then take the union of the three concatenated graphs followed by the closure. The resulting graph is shown below.\n",
     "\n",
-    "<img src=\"figures/nb/fsa_repeats.svg\"/>`\n",
+    "<img src=\"figures/fsa_repeats.svg\"/>`\n",
     "\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ff6c1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
