--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "00a543cd",
    "metadata": {},
    "outputs": [
@@ -57,14 +57,12 @@
     "\\newcommand{\\vy}{{\\bf y}}\n",
     "\\newcommand{\\gA}{\\mathcal{A}}\n",
     "\\newcommand{\\gT}{\\mathcal{T}}\n",
-    "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}\n",
-    "$\n",
-    "The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so I will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
+    "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so I will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
     "\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"../figures/wfsa_classes.svg\"/>\n",
+    "    <img src=\"figures/wfsa_classes.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "      A hierarchy of automata classes from general to specific in terms of representation power. Weighted transducers can represent anything that weighted acceptors can represent. Weighted acceptors in turn can represent any unweighted finite-state automata.\n",
@@ -75,7 +73,7 @@
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"simple_automata.svg\"/>\n",
+    "    <img src=\"figures/simple_automata.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "     An example of a simple finite-state automata.\n",
@@ -86,10 +84,10 @@
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/simple_dfa.svg\"/>\n",
+    "    <img src=\"figures/simple_dfa.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/simple_nfa.svg\"/> \n",
+    "    <img src=\"figures/simple_nfa.svg\"/> \n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "     An example of a deterministic automata on the left and a nondeterministic automata on the right. The nondeterministic automata has two arcs leaving the state $2$ both with the label $c$.\n",
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "2e4bd14d",
    "metadata": {},
    "outputs": [],
@@ -139,7 +137,7 @@
     "fsa.add_arc(src_node=2, dst_node=1, ilabel=0, olabel=0, weight=2)\n",
     "\n",
     "# Save the FSA as an svg\n",
-    "gtn.draw(fsa, \"figures/nb/simple_fsa.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/simple_fsa.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -149,7 +147,7 @@
    "source": [
     "The start state $s = 0$ has a bold circle around it. The accepting state $1$ is reprecented with concentric circles. Each arc has a label and a corresponding weight. So the first arc from state $0$ to state $1$ with the $a/0$ means the label is $a$ and the weight is $0$. The fact that there is only a single label on each arc means this graph is an *acceptor*. Since it has weights, we say its a *weighted acceptor*. Since the number of states is finite, some would call it a *weighted finite-state acceptor* or WFSA. That's a mouthful though, so I'll just call these graphs *acceptors*.\n",
     "\n",
-    "![simple fsa](figures/nb/simple_fsa.svg)\n",
+    "![simple fsa](figures/simple_fsa.svg)\n",
     "\n",
     "\n",
     "An accepting path in the graph is a sequence of arcs which begin at a start state and end in an accepting state. By concatenating the labels on an accepting path, we get a string which is accepted by the graph. So the string $aa$ is accepted by the graph by following the state sequence $0 \\rightarrow 2 \\rightarrow 1$. The string $ba$ is also accepted by the graph by following the same state sequence but taking the arc with label $b$ when traversing from state $0$ to state $1$. The language of the acceptor is the set of all strings which are accepted by it. You may also encounter \"recognized\" used as a synonym for \"accepted\". Let the variable $\\gA$ represent the above acceptor. In general, I'll use upercase script letters to represent graphs. Let $\\mathcal{L}(\\gA)$ denote the langauge of $\\gA$. In this case $\\mathcal{L}(\\gA) = \\{aa, ba\\}$. \n",
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "dbe6dae3",
    "metadata": {},
    "outputs": [],
@@ -167,7 +165,7 @@
     "fsa.add_node()\n",
     "fsa.add_arc(src_node=0, dst_node=3, ilabel=0, olabel=0, weight=1)\n",
     "fsa.add_arc(src_node=3, dst_node=1, ilabel=0, olabel=0, weight=3)\n",
-    "gtn.draw(fsa, \"figures/nb/multi_path.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/multi_path.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -177,7 +175,7 @@
    "source": [
     "The below graph accepts the same string by multiple paths. \n",
     "\n",
-    "![multi path](figures/nb/multi_path.svg)\n",
+    "![multi path](figures/multi_path.svg)\n",
     "\n",
     "\n",
     "The string $aa$ is accepted along the state sequence $0 \\rightarrow 2 \\rightarrow 1$ and along the state sequence $0 \\rightarrow 3 \\rightarrow 1$. In this case, to compute the score of $aa$ we need to consider both paths. Again we have a couple of options here. The most common approach is to *log-sum-exp* the individual path scores. Again this corresponds to interpreting the path scores as log probabilities. We'll use $\\LSE(s_1, s_2)$ to denote the *log-sum-exp* of the two scores $s_1$ and $s_2$:\n",
@@ -191,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "80f3268d",
    "metadata": {},
    "outputs": [],
@@ -223,7 +221,7 @@
     "# Set the arc weights\n",
     "fsa.set_weights([1, 1, 1, 3, 1, 2, 2])\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/multi_start_accept.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/multi_start_accept.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -233,7 +231,7 @@
    "source": [
     "Acceptors can have multiple start states and multiple accept states. In the below graph the states $0$ and $1$ are both start states, and the states $3$ and $4$ are both accept states. \n",
     "\n",
-    "![multi path](figures/nb/multi_start_accept.svg)\n",
+    "![multi path](figures/multi_start_accept.svg)\n",
     "\n",
     "\n",
     "It turns out that allowing multiple start or accept states does not increase the expressive power of the graph. With $\\epsilon$ transitions (which we will discuss soon), one can convert any graph with multiple start states and multiple accept states into an equivalent graph with a single start state and a single accept state.\n",
@@ -272,7 +270,7 @@
     "# Cycles are also allowed\n",
     "fsa.add_arc(src_node=2, dst_node=0, label=1);\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_loops.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_loops.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -282,7 +280,7 @@
    "source": [
     "Graphs can also have self-loops and cycles. For example, the below graphs has a self-loop on the state $0$ and a cycle following the state sequence $0 \\rightarrow 1 \\rightarrow 2 \\rightarrow 0$. \n",
     "\n",
-    "![fsa loops](figures/nb/fsa_loops.svg)\n",
+    "![fsa loops](figures/fsa_loops.svg)\n",
     "\n",
     "\n",
     "The language of graphs with cycles and self-loops contain infinitely many strings. For example the graph above accepts any string that starts with zero or more $a$s and ends in $bb$. As a regular expression we write this as $a^*bb$ where the $^*$ denotes zero or more $a$s. "
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "de58dea6",
    "metadata": {},
    "outputs": [],
@@ -304,7 +302,7 @@
     "fsa.add_arc(src_node=0, dst_node=1, label=0)\n",
     "fsa.add_arc(src_node=0, dst_node=1, label=gtn.epsilon)\n",
     "fsa.add_arc(src_node=1, dst_node=2, label=1)\n",
-    "gtn.draw(fsa, \"figures/nb/fsa_epsilon.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/fsa_epsilon.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -314,7 +312,7 @@
    "source": [
     "The $\\epsilon$ symbols has a special meaning when it is the label on an arc. Any arc with an $\\epsilon$ label can be traversed without consuming an input token in the string. So the below graph accepts the string $ab$, but it also accepts the string $b$ because we can traverse from state $0$ to state $1$ without consuming an input.\n",
     "\n",
-    "![fsa epsilon](figures/nb/fsa_epsilon.svg)\n",
+    "![fsa epsilon](figures/fsa_epsilon.svg)\n",
     "\n",
     "As it turns out, any graph with $\\epsilon$-transitions can be converted to an equivalent graph without $\\epsilon$ transitions. However, this usually comes at a large cost in the size of the graph. Complex languages can be represented by much more compact graphs with the use of $\\epsilon$-transitions.\n",
     "\n",
@@ -327,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "69b94426",
    "metadata": {},
    "outputs": [],
@@ -360,7 +358,7 @@
     "fsa.add_arc(src_node=3, dst_node=accept, label=gtn.epsilon)\n",
     "fsa.add_arc(src_node=4, dst_node=accept, label=gtn.epsilon)\n",
     "\n",
-    "gtn.draw(fsa, \"figures/nb/epsilon_start_accept.svg\", isymbols=symbols)"
+    "gtn.draw(fsa, \"figures/epsilon_start_accept.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -370,7 +368,7 @@
    "source": [
     "The graph below is the equivalent graph with a single start state and a single accept state.\n",
     "\n",
-    "![epsilon start accept](figures/nb/epsilon_start_accept.svg)\n",
+    "![epsilon start accept](figures/epsilon_start_accept.svg)\n",
     "\n",
     "\n",
     "The construction works by creating a new start state and connecting it to the old start states with $\\epsilon$ transitions with a weight of $0$. The old start nodes are regular internal nodes in this new graph. Similarly the old accept states are now regular states and they connect to the new accept state with $\\epsilon$ transitions with a weight of $0$.\n",
@@ -390,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "67b636cf",
    "metadata": {},
    "outputs": [],
@@ -415,7 +413,7 @@
     "# However, we can add an arc with a different input and output label.\n",
     "fst.add_arc(src_node=1, dst_node=2, ilabel=1, olabel=2, weight=3)\n",
     "\n",
-    "gtn.draw(fst, \"figures/nb/simple_fst.svg\", isymbols=isymbols, osymbols=osymbols)"
+    "gtn.draw(fst, \"figures/simple_fst.svg\", isymbols=isymbols, osymbols=osymbols)"
    ]
   },
   {
@@ -425,7 +423,7 @@
    "source": [
     "The arc labels distinguish an acceptor from a transducer. A transducer has both an input and output arc label. The arc labels are of the form $a\\!:\\!x/0$ where $a$ is the input label $x$ is the output label and $0$ is the weight. An acceptor can be represented as a transducer where the input and output labels on every arc are identical.\n",
     "\n",
-    "![simple fst](figures/nb/simple_fst.svg)\n",
+    "![simple fst](figures/simple_fst.svg)\n",
     "\n",
     "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transducer the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weights of a transduced pair is computed in the same way as in an acceptor. The scores of the individual arcs on the path are summed. The path scores are combined with *log-sum-exp*. So the weight of the transduced pair $(ab, xz)$ in the above graph is $0+3 = 3$.\n",
     "\n",
@@ -440,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "51312f4c",
    "metadata": {},
    "outputs": [],
@@ -458,7 +456,7 @@
     "fst.add_arc(src_node=0, dst_node=2, ilabel=0, olabel=1, weight=2)\n",
     "fst.add_arc(src_node=2, dst_node=3, ilabel=1, olabel=1, weight=3)\n",
     "\n",
-    "gtn.draw(fst, \"figures/nb/fst_example_score.svg\", isymbols=isymbols, osymbols=osymbols)"
+    "gtn.draw(fst, \"figures/fst_example_score.svg\", isymbols=isymbols, osymbols=osymbols)"
    ]
   },
   {
@@ -468,7 +466,7 @@
    "source": [
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/fst_example_score.svg\"/>\n",
+    "    <img src=\"figures/fst_example_score.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "    Compute the score of the transduced path $aab$ to $zyy$.\n",
@@ -482,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "adcf9bc8",
    "metadata": {},
    "outputs": [],
@@ -502,7 +500,7 @@
     "# And both an input label and the output label can be ϵ\n",
     "fst.add_arc(src_node=2, dst_node=3, ilabel=gtn.epsilon, olabel=gtn.epsilon)\n",
     "\n",
-    "gtn.draw(fst, \"figures/nb/fst_epsilon.svg\", isymbols=isymbols, osymbols=osymbols)"
+    "gtn.draw(fst, \"figures/fst_epsilon.svg\", isymbols=isymbols, osymbols=osymbols)"
    ]
   },
   {
@@ -512,7 +510,7 @@
    "source": [
     "Transducers can also have $\\epsilon$ transitions. The $\\epsilon$ can be either the input label on an arc, the output label on an arc, or both. When the $\\epsilon$ is the input label on an arc, it means we can traverse that arc without consuming an input token, but we still output the arc's correspoinding output label. When the $\\epsilon$ is the output label, the opposite is true. The input is consumed but no output is produced. And when the $\\epsilon$ is both the input and the output label, the arc can be traversed without consuming an input or producing an output.\n",
     "\n",
-    "![fst epsilon](figures/nb/fst_epsilon.svg)\n",
+    "![fst epsilon](figures/fst_epsilon.svg)\n",
     "\n",
     "\n",
     "In the above graph, the string $b$ gets transduced to the string $x$. On the first arc between states $0$ and $1$, we output an $x$ without consuming any token. On the second arc between states $1$ and $2$, a $b$ is consumed without outputting any new token. Finally, on the arc between states $2$ and $3$ we neither consume nor output a token."
