acceptor and transducer section

--- a/latex/math_commands.tex
+++ b/latex/math_commands.tex
@@ -10,6 +10,8 @@
 \newcommand{\vr}{{\bf r}}
 \newcommand{\vu}{{\bf u}}
 \newcommand{\vv}{{\bf v}}
+\newcommand{\vx}{{\bf x}}
+\newcommand{\vy}{{\bf y}}
 
 %% Graphs
 \newcommand{\gA}{\mathcal{A}}
