--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "00a543cd",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
        "        <style>\n",
        "             .container { width:900px !important; }\n",
        "             .figure {display:table; margin:auto;}\n",
-       "             .img {float: left; margin: 10px;}\n",
+       "             .img {float: left; margin: 10px; min-width: 300px;}\n",
        "             .caption {display:table-caption;caption-side:bottom;text-align:justify;color: rgba(0,0,0,0.6);}\n",
        "             td { background: white;}\n",
        "            .table_caption {\n",
@@ -57,7 +57,7 @@
     "\\newcommand{\\vy}{{\\bf y}}\n",
     "\\newcommand{\\gA}{\\mathcal{A}}\n",
     "\\newcommand{\\gT}{\\mathcal{T}}\n",
-    "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so I will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
+    "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so I will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
     "\n",
     "\n",
     "<div class=\"figure\">\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2e4bd14d",
    "metadata": {},
    "outputs": [],
@@ -145,19 +145,25 @@
    "id": "13d09f5b",
    "metadata": {},
    "source": [
-    "The start state $s = 0$ has a bold circle around it. The accepting state $1$ is reprecented with concentric circles. Each arc has a label and a corresponding weight. So the first arc from state $0$ to state $1$ with the $a/0$ means the label is $a$ and the weight is $0$. The fact that there is only a single label on each arc means this graph is an *acceptor*. Since it has weights, we say its a *weighted acceptor*. Since the number of states is finite, some would call it a *weighted finite-state acceptor* or WFSA. That's a mouthful though, so I'll just call these graphs *acceptors*.\n",
+    "The start state $s = 0$ has a bold circle around it. The accepting state $1$ is represented with concentric circles. Each arc has a label and a corresponding weight. So the first arc from state $0$ to state $1$ with the text $a/0$ means the label is $a$ and the weight is $0$. The fact that there is only a single label on each arc means this graph is an *acceptor*. Since it has weights, we say its a weighted acceptor. Since the number of states is finite, some would call it a weighted finite-state acceptor or WFSA. Again, that's a mouthful, so I'll just call these graphs acceptors.\n",
     "\n",
-    "![simple fsa](figures/simple_fsa.svg)\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/simple_fsa.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      An example of a simple acceptor. The label on each arc shows the input label and weight, so the $a/0$ represents a label of $a$ and a weight of $0$.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
-    "\n",
-    "An accepting path in the graph is a sequence of arcs which begin at a start state and end in an accepting state. By concatenating the labels on an accepting path, we get a string which is accepted by the graph. So the string $aa$ is accepted by the graph by following the state sequence $0 \\rightarrow 2 \\rightarrow 1$. The string $ba$ is also accepted by the graph by following the same state sequence but taking the arc with label $b$ when traversing from state $0$ to state $1$. The language of the acceptor is the set of all strings which are accepted by it. You may also encounter \"recognized\" used as a synonym for \"accepted\". Let the variable $\\gA$ represent the above acceptor. In general, I'll use upercase script letters to represent graphs. Let $\\mathcal{L}(\\gA)$ denote the langauge of $\\gA$. In this case $\\mathcal{L}(\\gA) = \\{aa, ba\\}$. \n",
+    "An accepting path in the graph is a sequence of arcs which begin at a start state and end in an accepting state. By concatenating the labels on an accepting path, we get a string which is accepted by the graph. So the string $aa$ is accepted by the graph by following the state sequence $0 \\rightarrow 2 \\rightarrow 1$. The string $ba$ is also accepted by the graph by following the same state sequence but taking the arc with label $b$ when traversing from state $0$ to state $1$. The language of the acceptor is the set of all strings which are accepted by it. You may also encounter \"recognized\" used as a synonym for \"accepted\". Let the variable $\\gA$ represent the above acceptor. In general, I'll use uppercase script letters to represent graphs. Let $\\mathcal{L}(\\gA)$ denote the language of $\\gA$. In this case $\\mathcal{L}(\\gA) = \\{aa, ba\\}$. \n",
     "\n",
     "There are different ways to compute the weight of a string accepted by the graph. The most common is to sum the weights of the arcs on the accepting path for that string. For example the string $aa$ in the above graph has a weight of $0 + 2 = 2$. Another option would be to multiply the weights. These two options correspond to interpreting the weights as either log probabilities or probabilities. We'll have more to say about this later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "dbe6dae3",
    "metadata": {},
    "outputs": [],
@@ -173,10 +179,16 @@
    "id": "6ced903c",
    "metadata": {},
    "source": [
-    "The below graph accepts the same string by multiple paths. \n",
+    "The below graph accepts the same sequence by multiple paths. \n",
     "\n",
-    "![multi path](figures/multi_path.svg)\n",
-    "\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/multi_path.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      An acceptor which has multiple paths for the same sequence, $aa$.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "The string $aa$ is accepted along the state sequence $0 \\rightarrow 2 \\rightarrow 1$ and along the state sequence $0 \\rightarrow 3 \\rightarrow 1$. In this case, to compute the score of $aa$ we need to consider both paths. Again we have a couple of options here. The most common approach is to *log-sum-exp* the individual path scores. Again this corresponds to interpreting the path scores as log probabilities. We'll use $\\LSE(s_1, s_2)$ to denote the *log-sum-exp* of the two scores $s_1$ and $s_2$:\n",
     "\n",
@@ -231,8 +243,16 @@
    "source": [
     "Acceptors can have multiple start states and multiple accept states. In the below graph the states $0$ and $1$ are both start states, and the states $3$ and $4$ are both accept states. \n",
     "\n",
-    "![multi path](figures/multi_start_accept.svg)\n",
-    "\n",
+    "<div class=\"figure\">\n",
+    "  <a name=\"multi_start_accept\"></a>\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/multi_start_accept.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "    An acceptor with multiple start states $(0$ and $1)$ and multiple\n",
+    "    accept states $(3$ and $4)$.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "It turns out that allowing multiple start or accept states does not increase the expressive power of the graph. With $\\epsilon$ transitions (which we will discuss soon), one can convert any graph with multiple start states and multiple accept states into an equivalent graph with a single start state and a single accept state.\n",
     "\n",
@@ -240,7 +260,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Example:\n",
+    "### Example\n",
     "\n",
     "Compute the score of the string $ab$ in figure 1.\n",
     "\n",
@@ -280,8 +300,14 @@
    "source": [
     "Graphs can also have self-loops and cycles. For example, the below graphs has a self-loop on the state $0$ and a cycle following the state sequence $0 \\rightarrow 1 \\rightarrow 2 \\rightarrow 0$. \n",
     "\n",
-    "![fsa loops](figures/fsa_loops.svg)\n",
-    "\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/fsa_loops.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "    A graph with a self-loop on the state $0$ and a cycle from $0 \\rightarrow 1 \\rightarrow 2 \\rightarrow 0$.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "The language of graphs with cycles and self-loops contain infinitely many strings. For example the graph above accepts any string that starts with zero or more $a$s and ends in $bb$. As a regular expression we write this as $a^*bb$ where the $^*$ denotes zero or more $a$s. "
    ]
@@ -312,7 +338,14 @@
    "source": [
     "The $\\epsilon$ symbols has a special meaning when it is the label on an arc. Any arc with an $\\epsilon$ label can be traversed without consuming an input token in the string. So the below graph accepts the string $ab$, but it also accepts the string $b$ because we can traverse from state $0$ to state $1$ without consuming an input.\n",
     "\n",
-    "![fsa epsilon](figures/fsa_epsilon.svg)\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/fsa_epsilon.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "    An acceptor with an $\\epsilon$ transition on the second arc between state $0$ and $1$\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "As it turns out, any graph with $\\epsilon$-transitions can be converted to an equivalent graph without $\\epsilon$ transitions. However, this usually comes at a large cost in the size of the graph. Complex languages can be represented by much more compact graphs with the use of $\\epsilon$-transitions.\n",
     "\n",
@@ -320,7 +353,7 @@
     "\n",
     "### Example\n",
     "\n",
-    "Convert the graph above which has multiple start and accept states to an equivalent graph with only a single start and accept state using $\\epsilon$ transitions."
+    "Convert the [graph above](#multi_start_accept) which has multiple start and accept states to an equivalent graph with only a single start and accept state using $\\epsilon$ transitions."
    ]
   },
   {
@@ -368,8 +401,14 @@
    "source": [
     "The graph below is the equivalent graph with a single start state and a single accept state.\n",
     "\n",
-    "![epsilon start accept](figures/epsilon_start_accept.svg)\n",
-    "\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/epsilon_start_accept.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      The equivalent graph using only a single start state and accept state to the graph above which has multiple start and accept states.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "The construction works by creating a new start state and connecting it to the old start states with $\\epsilon$ transitions with a weight of $0$. The old start nodes are regular internal nodes in this new graph. Similarly the old accept states are now regular states and they connect to the new accept state with $\\epsilon$ transitions with a weight of $0$.\n",
     "\n",
@@ -383,7 +422,7 @@
    "source": [
     "## Transducers\n",
     "\n",
-    "A *transducer* maps input strings to output strings. Transducers are a generalization of an acceptors. Every acceptor is a tranducer, but not every transducer is an acceptor. Let's look at a few example transducers to understand how they work."
+    "A *transducer* maps input strings to output strings. Transducers are a generalization of an acceptors. Every acceptor is a transducer, but not every transducer is an acceptor. Let's look at a few example transducers to understand how they work."
    ]
   },
   {
@@ -423,9 +462,16 @@
    "source": [
     "The arc labels distinguish an acceptor from a transducer. A transducer has both an input and output arc label. The arc labels are of the form $a\\!:\\!x/0$ where $a$ is the input label $x$ is the output label and $0$ is the weight. An acceptor can be represented as a transducer where the input and output labels on every arc are identical.\n",
     "\n",
-    "![simple fst](figures/simple_fst.svg)\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/simple_fst.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "    An example of a simple transducer. The label on each arc shows the input label, the output label, and the weight. So $a\\!:\\!x/0$ represents an input label of $a$, and output label of $x$, and a weight of $0$.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
-    "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transducer the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weights of a transduced pair is computed in the same way as in an acceptor. The scores of the individual arcs on the path are summed. The path scores are combined with *log-sum-exp*. So the weight of the transduced pair $(ab, xz)$ in the above graph is $0+3 = 3$.\n",
+    "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transduces the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weights of a transduced pair is computed in the same way as in an acceptor. The scores of the individual arcs on the path are summed. The path scores are combined with *log-sum-exp*. So the weight of the transduced pair $(ab, xz)$ in the above graph is $0+3 = 3$.\n",
     "\n",
     "We have to generalize concept of the language from an acceptor to a transducer. I'll call this generalization the transduced set. Since it will always be clear from context if the graph is an acceptor or transducer, I'll use the same symbol $\\mathcal{L}$ to represent the transduced set. If $\\gT$ is a transducer, then $\\mathcal{L}(\\gT)$ is the set of pairs of strings transduced by $\\gT$. More formally, a pair of strings $(\\vx, \\vy) \\in \\mathcal{L}(\\gT)$ if $\\gT$ transduces $\\vx$ to $\\vy$.\n",
     "\n",
@@ -469,7 +515,7 @@
     "    <img src=\"figures/fst_example_score.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "    Compute the score of the transduced path $aab$ to $zyy$.\n",
+    "    An example transducer which transduces the sequence $aab$ to the sequence $zyy$ on multiple paths.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -508,10 +554,16 @@
    "id": "2160505a",
    "metadata": {},
    "source": [
-    "Transducers can also have $\\epsilon$ transitions. The $\\epsilon$ can be either the input label on an arc, the output label on an arc, or both. When the $\\epsilon$ is the input label on an arc, it means we can traverse that arc without consuming an input token, but we still output the arc's correspoinding output label. When the $\\epsilon$ is the output label, the opposite is true. The input is consumed but no output is produced. And when the $\\epsilon$ is both the input and the output label, the arc can be traversed without consuming an input or producing an output.\n",
+    "Transducers can also have $\\epsilon$ transitions. The $\\epsilon$ can be either the input label on an arc, the output label on an arc, or both. When the $\\epsilon$ is the input label on an arc, it means we can traverse that arc without consuming an input token, but we still output the arc's corresponding output label. When the $\\epsilon$ is the output label, the opposite is true. The input is consumed but no output is produced. And when the $\\epsilon$ is both the input and the output label, the arc can be traversed without consuming an input or producing an output.\n",
     "\n",
-    "![fst epsilon](figures/fst_epsilon.svg)\n",
-    "\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/fst_epsilon.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      A transducer with $\\epsilon$ transitions. The $\\epsilon$ can be just the input label, just the output label, or both the input and output label.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "In the above graph, the string $b$ gets transduced to the string $x$. On the first arc between states $0$ and $1$, we output an $x$ without consuming any token. On the second arc between states $1$ and $2$, a $b$ is consumed without outputting any new token. Finally, on the arc between states $2$ and $3$ we neither consume nor output a token."
    ]
