minor tex updates

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -67,9 +67,11 @@
 \tableofcontents
 
 \subfile{introduction}
-\subfile{acceptors_transducers}
+\subfile{acceptors_and_transducers}
 \subfile{basic_operations}
 \subfile{advanced_operations}
+\subfile{differentiable_automata}
+\subfile{extended_examples}
 
 \bibliographystyle{unsrt}
 \bibliography{references}
